[tool.poetry]
name = "llm-toolbox"
version = "0.0.1a1"
description = "LLM toolbox"
authors = ["rydnr <github@acm-sl.org>"]
readme = "README.md"
homepage = "https://github.com/rydnr/llm-toolbox"
packages = [{include = "rydnrllmtoolbox"}]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
